# l5kit

./: .buildinfo  .gitignore  LICENSE  NOTICE  README.html  README.md  additional_resources_index.html  api_reference.html  api_reference.rst  changelog.html  competition.html  competition.md  competitions.html  conf.py  contribute_index.html  coords_systems.html  coords_systems.md  credits.html  data_format.html  data_format.md  dataset.html  dataset_path.txt  general_util.py  genindex.html  gettingstarted.html  how_to_contribute.html  how_to_contribute.md  index.html  index.rst  installation.html  intro_index.html  introduction.html  license.html  objects.inv  overview.html  planning.html  planning_open_loop.html  prediction.html  prediction_competition.html  py-modindex.html  (+9 more)
l5kit/: .coveragerc  .flake8  .mypy.ini  .pre-commit-config.yaml  Pipfile  pyproject.toml  requirements.html  requirements.txt  requirements_torch15.txt  requirements_torch16.txt  run_tests.sh  setup.cfg  setup.py
l5kit/l5kit/benchmark/: __init__.py  atari.py  cle_utils.py  config.yaml  config_nb.yaml  gym_env_l5_raster.py  gym_envs.py  l5_gym.py  l5_raster.py  utils.py
l5kit/l5kit/cle/: closed_loop_evaluator.py  composite_metrics.py  metric_set.py  metrics.py  scene_type_agg.py  validators.py
l5kit/l5kit/configs/: __init__.py  config.py  default.yaml
l5kit/l5kit/data/: __init__.py  combine.py  filter.py  labels.py  local_data_manager.py  map.py  map_api.py  new_dataset.py  proto_api.py  zarr_dataset.py  zarr_utils.py
l5kit/l5kit/dataset/: __init__.py  agent.py  chop_dataset.py  ego.py  (+6 more)
(+968 files in other folders)
