[tool.black]
line-length = 119
exclude = '/l5kit\/data\/proto\/*/'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 119
skip='l5kit\/data\/proto'

[tool.pytest.ini_options]
xfail_strict=true


[tool.poetry]
name = "l5kit"
version = "1.0.5"
description = "Lyft Autonomous Vehicle Research library"
authors = ["Lyft Level 5"]
repository = "https://github.com/lyft/l5kit"
license = "Apache-2.0"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
]
exclude = ["**/*.tests", "**/*.tests.*", "**/tests.*", "**/tests"]

[tool.poetry.dependencies]
python = "^3.6.8"
imageio = "^2.9.0"
matplotlib = "^3.3.0"
numpy = "^1.19.1"
opencv-contrib-python-headless = "^4.4.0"
protobuf = "3.12.2"
pymap3d = "^2.4.1"
scipy = "^1.5.2"
tqdm = "^4.48.2"
transforms3d = "^0.3.1"
zarr = "^2.4.0"
pyyaml = "^5.3.1"
ptable = "^0.9.2"
notebook = "^6.1.3"
ipywidgets = "^7.5.1"
torch = "1.5.1"
torchvision = "0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
mypy = "^0.782"
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^5.4.1"
Sphinx = "3.1.1"
sphinx-rtd-theme = "0.5.0"
recommonmark = "0.6.0"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
